Closed Bug 309675 Opened 20 years ago Closed 20 years ago

attribute mapping code for table's frame attribute cascades incorrectly

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

Attachments

(3 files)

A bunch of the attribute mapping code for TABLE's frame attribute cascades incorrectly since it doesn't check against eCSSUnit_Null before setting. This is documented in: http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/style/nsIStyleRule.h&rev=3.26&mark=93-97#84 Testcase and patch coming.
Attached patch patch (diff -ub)Splinter Review
Attachment #197097 - Flags: superreview?(bzbarsky)
Attachment #197097 - Flags: review?(bzbarsky)
Comment on attachment 197097 [details] [diff] [review] patch (diff -ub) r+sr=bzbarsky
Attachment #197097 - Flags: superreview?(bzbarsky)
Attachment #197097 - Flags: superreview+
Attachment #197097 - Flags: review?(bzbarsky)
Attachment #197097 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: