Fix cascading for frame attribute.  b=309675  r+sr=bzbarsky